tests/cmp/dc-label-missing-semicolon.golden
tests/cmp/dc-label-missing-semicolon.trp:1:33: parse error
  (while parsing DC label)
  1 | let val x = 42 raisedTo `<alice bob>`
    |                                 ^
  unexpected identifier 'bob'
  expected ';'

Suggestion: In DC labels, use ';' to separate confidentiality and integrity.
  Syntax: `< confidentiality ; integrity >`
  Example: `< alice ; bob >`

